now it is possible to verity roles in integration tests